src/objects/Count_Object__c.object
<CustomObject>
    <description>Object to store the count of the fields</description>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectAndFieldName__c</fullName>
        <externalId>true</externalId>
        <label>ObjectAndFieldName</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Count Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field_Name__c</columns>
        <columns>ObjectAndFieldName__c</columns>
        <columns>Count__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Count Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>